--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -25,16 +25,18 @@
       "                   'abbreviation': 'CL'},\n",
       "  'allStarStatus': 'N',\n",
       "  'id': 133,\n",
-      "  'name': 'Oakland Athletics',\n",
+      "  'name': 'Athletics',\n",
       "  'link': '/api/v1/teams/133',\n",
-      "  'season': 2024,\n",
-      "  'venue': {'id': 10, 'name': 'Oakland Coliseum', 'link': '/api/v1/venues/10'},\n",
+      "  'season': 2026,\n",
+      "  'venue': {'id': 2529,\n",
+      "            'name': 'Sutter Health Park',\n",
+      "            'link': '/api/v1/venues/2529'},\n",
       "  'springVenue': {'id': 2507, 'link': '/api/v1/venues/2507'},\n",
-      "  'teamCode': 'oak',\n",
-      "  'fileCode': 'oak',\n",
-      "  'abbreviation': 'OAK',\n",
+      "  'teamCode': 'ath',\n",
+      "  'fileCode': 'ath',\n",
+      "  'abbreviation': 'ATH',\n",
       "  'teamName': 'Athletics',\n",
-      "  'locationName': 'Oakland',\n",
+      "  'locationName': 'Sacramento',\n",
       "  'firstYearOfPlay': '1901',\n",
       "  'league': {'id': 103,\n",
       "             'name': 'American League',\n",
@@ -45,8 +47,8 @@
       "  'sport': {'id': 1,\n",
       "            'link': '/api/v1/sports/1',\n",
       "            'name': 'Major League Baseball'},\n",
-      "  'shortName': 'Oakland',\n",
-      "  'franchiseName': 'Oakland',\n",
+      "  'shortName': 'Athletics',\n",
+      "  'franchiseName': 'Athletics',\n",
       "  'clubName': 'Athletics',\n",
       "  'active': True},\n",
       " {'springLeague': {'id': 115,\n",
@@ -57,7 +59,7 @@
       "  'id': 134,\n",
       "  'name': 'Pittsburgh Pirates',\n",
       "  'link': '/api/v1/teams/134',\n",
-      "  'season': 2024,\n",
+      "  'season': 2026,\n",
       "  'venue': {'id': 31, 'name': 'PNC Park', 'link': '/api/v1/venues/31'},\n",
       "  'springVenue': {'id': 2526, 'link': '/api/v1/venues/2526'},\n",
       "  'teamCode': 'pit',\n",
@@ -87,7 +89,7 @@
       "  'id': 135,\n",
       "  'name': 'San Diego Padres',\n",
       "  'link': '/api/v1/teams/135',\n",
-      "  'season': 2024,\n",
+      "  'season': 2026,\n",
       "  'venue': {'id': 2680, 'name': 'Petco Park', 'link': '/api/v1/venues/2680'},\n",
       "  'springVenue': {'id': 2530, 'link': '/api/v1/venues/2530'},\n",
       "  'teamCode': 'sdn',\n",
@@ -117,7 +119,7 @@
       "  'id': 136,\n",
       "  'name': 'Seattle Mariners',\n",
       "  'link': '/api/v1/teams/136',\n",
-      "  'season': 2024,\n",
+      "  'season': 2026,\n",
       "  'venue': {'id': 680, 'name': 'T-Mobile Park', 'link': '/api/v1/venues/680'},\n",
       "  'springVenue': {'id': 2530, 'link': '/api/v1/venues/2530'},\n",
       "  'teamCode': 'sea',\n",
@@ -147,7 +149,7 @@
       "  'id': 137,\n",
       "  'name': 'San Francisco Giants',\n",
       "  'link': '/api/v1/teams/137',\n",
-      "  'season': 2024,\n",
+      "  'season': 2026,\n",
       "  'venue': {'id': 2395, 'name': 'Oracle Park', 'link': '/api/v1/venues/2395'},\n",
       "  'springVenue': {'id': 2532, 'link': '/api/v1/venues/2532'},\n",
       "  'teamCode': 'sfn',\n",
@@ -177,7 +179,7 @@
       "  'id': 138,\n",
       "  'name': 'St. Louis Cardinals',\n",
       "  'link': '/api/v1/teams/138',\n",
-      "  'season': 2024,\n",
+      "  'season': 2026,\n",
       "  'venue': {'id': 2889, 'name': 'Busch Stadium', 'link': '/api/v1/venues/2889'},\n",
       "  'springVenue': {'id': 2520, 'link': '/api/v1/venues/2520'},\n",
       "  'teamCode': 'sln',\n",
@@ -207,7 +209,7 @@
       "  'id': 139,\n",
       "  'name': 'Tampa Bay Rays',\n",
       "  'link': '/api/v1/teams/139',\n",
-      "  'season': 2024,\n",
+      "  'season': 2026,\n",
       "  'venue': {'id': 12, 'name': 'Tropicana Field', 'link': '/api/v1/venues/12'},\n",
       "  'springVenue': {'id': 2534, 'link': '/api/v1/venues/2534'},\n",
       "  'teamCode': 'tba',\n",
@@ -237,7 +239,7 @@
       "  'id': 140,\n",
       "  'name': 'Texas Rangers',\n",
       "  'link': '/api/v1/teams/140',\n",
-      "  'season': 2024,\n",
+      "  'season': 2026,\n",
       "  'venue': {'id': 5325,\n",
       "            'name': 'Globe Life Field',\n",
       "            'link': '/api/v1/venues/5325'},\n",
@@ -269,7 +271,7 @@
       "  'id': 141,\n",
       "  'name': 'Toronto Blue Jays',\n",
       "  'link': '/api/v1/teams/141',\n",
-      "  'season': 2024,\n",
+      "  'season': 2026,\n",
       "  'venue': {'id': 14, 'name': 'Rogers Centre', 'link': '/api/v1/venues/14'},\n",
       "  'springVenue': {'id': 2536, 'link': '/api/v1/venues/2536'},\n",
       "  'teamCode': 'tor',\n",
@@ -299,7 +301,7 @@
       "  'id': 142,\n",
       "  'name': 'Minnesota Twins',\n",
       "  'link': '/api/v1/teams/142',\n",
-      "  'season': 2024,\n",
+      "  'season': 2026,\n",
       "  'venue': {'id': 3312, 'name': 'Target Field', 'link': '/api/v1/venues/3312'},\n",
       "  'springVenue': {'id': 2862, 'link': '/api/v1/venues/2862'},\n",
       "  'teamCode': 'min',\n",
@@ -329,7 +331,7 @@
       "  'id': 143,\n",
       "  'name': 'Philadelphia Phillies',\n",
       "  'link': '/api/v1/teams/143',\n",
-      "  'season': 2024,\n",
+      "  'season': 2026,\n",
       "  'venue': {'id': 2681,\n",
       "            'name': 'Citizens Bank Park',\n",
       "            'link': '/api/v1/venues/2681'},\n",
@@ -361,7 +363,7 @@
       "  'id': 144,\n",
       "  'name': 'Atlanta Braves',\n",
       "  'link': '/api/v1/teams/144',\n",
-      "  'season': 2024,\n",
+      "  'season': 2026,\n",
       "  'venue': {'id': 4705, 'name': 'Truist Park', 'link': '/api/v1/venues/4705'},\n",
       "  'springVenue': {'id': 5380, 'link': '/api/v1/venues/5380'},\n",
       "  'teamCode': 'atl',\n",
@@ -391,10 +393,8 @@
       "  'id': 145,\n",
       "  'name': 'Chicago White Sox',\n",
       "  'link': '/api/v1/teams/145',\n",
-      "  'season': 2024,\n",
-      "  'venue': {'id': 4,\n",
-      "            'name': 'Guaranteed Rate Field',\n",
-      "            'link': '/api/v1/venues/4'},\n",
+      "  'season': 2026,\n",
+      "  'venue': {'id': 4, 'name': 'Rate Field', 'link': '/api/v1/venues/4'},\n",
       "  'springVenue': {'id': 3809, 'link': '/api/v1/venues/3809'},\n",
       "  'teamCode': 'cha',\n",
       "  'fileCode': 'cws',\n",
@@ -423,7 +423,7 @@
       "  'id': 146,\n",
       "  'name': 'Miami Marlins',\n",
       "  'link': '/api/v1/teams/146',\n",
-      "  'season': 2024,\n",
+      "  'season': 2026,\n",
       "  'venue': {'id': 4169,\n",
       "            'name': 'loanDepot park',\n",
       "            'link': '/api/v1/venues/4169'},\n",
@@ -455,7 +455,7 @@
       "  'id': 147,\n",
       "  'name': 'New York Yankees',\n",
       "  'link': '/api/v1/teams/147',\n",
-      "  'season': 2024,\n",
+      "  'season': 2026,\n",
       "  'venue': {'id': 3313,\n",
       "            'name': 'Yankee Stadium',\n",
       "            'link': '/api/v1/venues/3313'},\n",
@@ -487,7 +487,7 @@
       "  'id': 158,\n",
       "  'name': 'Milwaukee Brewers',\n",
       "  'link': '/api/v1/teams/158',\n",
-      "  'season': 2024,\n",
+      "  'season': 2026,\n",
       "  'venue': {'id': 32,\n",
       "            'name': 'American Family Field',\n",
       "            'link': '/api/v1/venues/32'},\n",
@@ -519,7 +519,7 @@
       "  'id': 108,\n",
       "  'name': 'Los Angeles Angels',\n",
       "  'link': '/api/v1/teams/108',\n",
-      "  'season': 2024,\n",
+      "  'season': 2026,\n",
       "  'venue': {'id': 1, 'name': 'Angel Stadium', 'link': '/api/v1/venues/1'},\n",
       "  'springVenue': {'id': 2500, 'link': '/api/v1/venues/2500'},\n",
       "  'teamCode': 'ana',\n",
@@ -549,7 +549,7 @@
       "  'id': 109,\n",
       "  'name': 'Arizona Diamondbacks',\n",
       "  'link': '/api/v1/teams/109',\n",
-      "  'season': 2024,\n",
+      "  'season': 2026,\n",
       "  'venue': {'id': 15, 'name': 'Chase Field', 'link': '/api/v1/venues/15'},\n",
       "  'springVenue': {'id': 4249, 'link': '/api/v1/venues/4249'},\n",
       "  'teamCode': 'ari',\n",
@@ -579,7 +579,7 @@
       "  'id': 110,\n",
       "  'name': 'Baltimore Orioles',\n",
       "  'link': '/api/v1/teams/110',\n",
-      "  'season': 2024,\n",
+      "  'season': 2026,\n",
       "  'venue': {'id': 2,\n",
       "            'name': 'Oriole Park at Camden Yards',\n",
       "            'link': '/api/v1/venues/2'},\n",
@@ -611,7 +611,7 @@
       "  'id': 111,\n",
       "  'name': 'Boston Red Sox',\n",
       "  'link': '/api/v1/teams/111',\n",
-      "  'season': 2024,\n",
+      "  'season': 2026,\n",
       "  'venue': {'id': 3, 'name': 'Fenway Park', 'link': '/api/v1/venues/3'},\n",
       "  'springVenue': {'id': 4309, 'link': '/api/v1/venues/4309'},\n",
       "  'teamCode': 'bos',\n",
@@ -641,7 +641,7 @@
       "  'id': 112,\n",
       "  'name': 'Chicago Cubs',\n",
       "  'link': '/api/v1/teams/112',\n",
-      "  'season': 2024,\n",
+      "  'season': 2026,\n",
       "  'venue': {'id': 17, 'name': 'Wrigley Field', 'link': '/api/v1/venues/17'},\n",
       "  'springVenue': {'id': 4629, 'link': '/api/v1/venues/4629'},\n",
       "  'teamCode': 'chn',\n",
@@ -671,7 +671,7 @@
       "  'id': 113,\n",
       "  'name': 'Cincinnati Reds',\n",
       "  'link': '/api/v1/teams/113',\n",
-      "  'season': 2024,\n",
+      "  'season': 2026,\n",
       "  'venue': {'id': 2602,\n",
       "            'name': 'Great American Ball Park',\n",
       "            'link': '/api/v1/venues/2602'},\n",
@@ -703,7 +703,7 @@
       "  'id': 114,\n",
       "  'name': 'Cleveland Guardians',\n",
       "  'link': '/api/v1/teams/114',\n",
-      "  'season': 2024,\n",
+      "  'season': 2026,\n",
       "  'venue': {'id': 5, 'name': 'Progressive Field', 'link': '/api/v1/venues/5'},\n",
       "  'springVenue': {'id': 3834, 'link': '/api/v1/venues/3834'},\n",
       "  'teamCode': 'cle',\n",
@@ -733,7 +733,7 @@
       "  'id': 115,\n",
       "  'name': 'Colorado Rockies',\n",
       "  'link': '/api/v1/teams/115',\n",
-      "  'season': 2024,\n",
+      "  'season': 2026,\n",
       "  'venue': {'id': 19, 'name': 'Coors Field', 'link': '/api/v1/venues/19'},\n",
       "  'springVenue': {'id': 4249, 'link': '/api/v1/venues/4249'},\n",
       "  'teamCode': 'col',\n",
@@ -763,7 +763,7 @@
       "  'id': 116,\n",
       "  'name': 'Detroit Tigers',\n",
       "  'link': '/api/v1/teams/116',\n",
-      "  'season': 2024,\n",
+      "  'season': 2026,\n",
       "  'venue': {'id': 2394, 'name': 'Comerica Park', 'link': '/api/v1/venues/2394'},\n",
       "  'springVenue': {'id': 2511, 'link': '/api/v1/venues/2511'},\n",
       "  'teamCode': 'det',\n",
@@ -793,10 +793,8 @@
       "  'id': 117,\n",
       "  'name': 'Houston Astros',\n",
       "  'link': '/api/v1/teams/117',\n",
-      "  'season': 2024,\n",
-      "  'venue': {'id': 2392,\n",
-      "            'name': 'Minute Maid Park',\n",
-      "            'link': '/api/v1/venues/2392'},\n",
+      "  'season': 2026,\n",
+      "  'venue': {'id': 2392, 'name': 'Daikin Park', 'link': '/api/v1/venues/2392'},\n",
       "  'springVenue': {'id': 5000, 'link': '/api/v1/venues/5000'},\n",
       "  'teamCode': 'hou',\n",
       "  'fileCode': 'hou',\n",
@@ -825,7 +823,7 @@
       "  'id': 118,\n",
       "  'name': 'Kansas City Royals',\n",
       "  'link': '/api/v1/teams/118',\n",
-      "  'season': 2024,\n",
+      "  'season': 2026,\n",
       "  'venue': {'id': 7, 'name': 'Kauffman Stadium', 'link': '/api/v1/venues/7'},\n",
       "  'springVenue': {'id': 2603, 'link': '/api/v1/venues/2603'},\n",
       "  'teamCode': 'kca',\n",
@@ -855,7 +853,7 @@
       "  'id': 119,\n",
       "  'name': 'Los Angeles Dodgers',\n",
       "  'link': '/api/v1/teams/119',\n",
-      "  'season': 2024,\n",
+      "  'season': 2026,\n",
       "  'venue': {'id': 22, 'name': 'Dodger Stadium', 'link': '/api/v1/venues/22'},\n",
       "  'springVenue': {'id': 3809, 'link': '/api/v1/venues/3809'},\n",
       "  'teamCode': 'lan',\n",
@@ -885,7 +883,7 @@
       "  'id': 120,\n",
       "  'name': 'Washington Nationals',\n",
       "  'link': '/api/v1/teams/120',\n",
-      "  'season': 2024,\n",
+      "  'season': 2026,\n",
       "  'venue': {'id': 3309,\n",
       "            'name': 'Nationals Park',\n",
       "            'link': '/api/v1/venues/3309'},\n",
@@ -917,7 +915,7 @@
       "  'id': 121,\n",
       "  'name': 'New York Mets',\n",
       "  'link': '/api/v1/teams/121',\n",
-      "  'season': 2024,\n",
+      "  'season': 2026,\n",
       "  'venue': {'id': 3289, 'name': 'Citi Field', 'link': '/api/v1/venues/3289'},\n",
       "  'springVenue': {'id': 2856, 'link': '/api/v1/venues/2856'},\n",
       "  'teamCode': 'nyn',\n",
