latest update commit - added requests.rest for testing endpoints, edited some other existing files, mostly messed with dev.py

--- a/mlbRequests.ipynb
+++ b/mlbRequests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3f8df691",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "caacc535",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d01d54ca",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "38348aaf",
    "metadata": {},
    "outputs": [],
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "feefd970",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0a34d176",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "id": "38d00203",
    "metadata": {},
    "outputs": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "161e5271",
    "metadata": {},
    "outputs": [
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "86724823",
    "metadata": {},
    "outputs": [
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "cda85bb1",
    "metadata": {},
    "outputs": [
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e2a6aee1",
    "metadata": {},
    "outputs": [
@@ -652,9 +652,9 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "==========================================\n",
-      "MLB Specific Division (NL) Response Sample\n",
-      "==========================================\n",
+      "===============================================\n",
+      "MLB Specific Division (NL East) Response Sample\n",
+      "===============================================\n",
       "\n",
       "{\n",
       "  \"id\": 204,\n",
@@ -683,13 +683,13 @@
     "printSample(\n",
     "    \"divisions\",\n",
     "    divisionId=204,\n",
-    "    sampleTitle=\"MLB Specific Division (NL) Response Sample\",\n",
+    "    sampleTitle=\"MLB Specific Division (NL East) Response Sample\",\n",
     ")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "8a017549",
    "metadata": {},
    "outputs": [
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "630c7096",
    "metadata": {},
    "outputs": [],
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 14,
    "id": "0521e082",
    "metadata": {},
    "outputs": [
@@ -830,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6d7e51a5",
    "metadata": {},
    "outputs": [],
@@ -846,6 +846,34 @@
     "    playerId = playerId if playerId else getPlayerId(playerName) if playerName else None\n",
     "    return f\"https://img.mlbstatic.com/mlb-photos/image/upload/d_people:generic:headshot:67:current.png/w_213,q_auto:best/v1/people/{playerId}/headshot/67/current\"\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "bed2cc03",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample Team Logo URL (Braves): https://www.mlbstatic.com/team-logos/team-cap-on-light/144.svg\n",
+      "Sample Player Headshot URL (Austin Riley): https://img.mlbstatic.com/mlb-photos/image/upload/d_people:generic:headshot:67:current.png/w_213,q_auto:best/v1/people/663586/headshot/67/current\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Sample Team Logo URL (Braves): {getLogoUrl(teamName='Braves')}\")\n",
+    "print(f\"Sample Player Headshot URL (Austin Riley): {getHeadshotUrl(playerName='Austin Riley')}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc5f9e9b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -864,7 +892,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
